--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -10,7 +10,7 @@ categories: 机器学习 自然语言处理
 之后准备花时间看看 Bayesian Statistics，现在的了解不够系统。
 
 #### 频率学派 vs 贝叶斯学派
-> 频率派把需要推断的参数 $\theta$ 看做是固定的未知常数，即概率虽然是未知的，但最起码是确定的一个值，同时，样本 X 是随机的，所以频率派重点研究样本空间，大部分的概率计算都是针对样本 X 的分布；而贝叶斯派的观点则截然相反，他们认为待估计的参数是随机变量，服从一定的分布，而样本 X 是固定的，由于样本是固定的，所以他们重点研究的是参数的分布[^6]。
+> 频率派把需要推断的参数 $\theta$ 看做是固定的未知常数，即概率虽然是未知的，但最起码是确定的一个值，同时，样本 X 是随机的，所以频率派重点研究 **样本空间**，大部分的概率计算都是针对样本 X 的分布；而贝叶斯派的观点则截然相反，他们认为待估计的参数是 **随机变量**，服从一定的分布，而样本 X 是固定的，由于样本是固定的，所以他们重点研究的是参数的分布[^6]。
 
 $$\text{先验信息}+\text{样本信息} \Rightarrow \text{后验分布}$$
 
@@ -22,7 +22,7 @@ $$\text{先验信息}+\text{样本信息} \Rightarrow \text{后验分布}$$
 
 $$P(\theta|x) = \frac{P(x|\theta)P(\theta)}{\int P(x|\theta)P(\theta)d\theta} \propto P(x|\theta)P(\theta) \tag{1}$$
 
-> 我们不妨再举一个简单的例子来说明这一精神：你随便找枚硬币，掷一下，观察一下结果。好，你观察到的结果要么是“正”，要么是“反”，不妨假设你观察到的是“正”。现在你要去根据这个观测数据推断这枚硬币掷出“正”的概率是多大。根据最大似然估计的精神，我们应该猜测这枚硬币掷出“正”的概率是 1 ，因为这个才是能最大化 $P(x\|\theta)$ 的那个猜测。然而每个人都会大摇其头——很显然，你随机摸出一枚硬币这枚硬币居然没有反面的概率是“不存在的”，我们对一枚随机硬币是否一枚有偏硬币，偏了多少，是有着一个**先验的认识**的，这个认识就是绝大多数硬币都是基本公平的，偏得越多的硬币越少见（可以用一个 **beta 分布** 来表达这一先验概率）。将这个先验正态分布 $p(\theta)$ （其中 $\theta$ 表示硬币掷出正面的比例，小写的 p 代表这是**概率密度函数**）结合到我们的问题中，我们便不是去最大化 $P(x\|\theta)$ ，而是去最大化 $P(x\|\theta)P(\theta)$ 。显然 $\theta = 1$ 是不行的，因为 $P(\theta=1)$ 为 0，导致整个乘积也为 0 。实际上，只要对这个式子求一个导数就可以得到最值点。[^1]
+> 我们不妨再举一个简单的例子来说明这一精神：你随便找枚硬币，掷一下，观察一下结果。好，你观察到的结果要么是“正”，要么是“反”，不妨假设你观察到的是“正”。现在你要去根据这个观测数据推断这枚硬币掷出“正”的概率是多大。根据最大似然估计的精神，我们应该猜测这枚硬币掷出“正”的概率是 1 ，因为这个才是能最大化 $P(x\|\theta)$ 的那个猜测。这样很显然是不切实际的，我们对一枚随机硬币是否为一枚有偏硬币，偏了多少，是有着一个**先验的认识**的，这个认识就是绝大多数硬币都是基本公平的，偏得越多的硬币越少见（可以用一个 **beta 分布** 来表达这一先验概率）。将这个先验正态分布 $p(\theta)$ （其中 $\theta$ 表示硬币掷出正面的比例，小写的 p 代表这是**概率密度函数**）结合到我们的问题中，我们便不是去最大化 $P(x\|\theta)$ ，而是去最大化 $P(x\|\theta)P(\theta)$ 。显然 $\theta = 1$ 是不行的，因为 $P(\theta=1)$ 为 0，导致整个乘积也为 0 。实际上，只要对这个式子求一个导数就可以得到最值点。[^1]
 
 ![此处输入图片的描述][1]
 
