--- a/_posts/2016-03-20- LR-and-NB.md
+++ b/_posts/2016-03-20- LR-and-NB.md
@@ -56,8 +56,11 @@ w_i & = \frac{\mu_{i0}-\mu_{i1}}{\delta_i^2}
  -  Naive Bayes是建立在**条件独立**假设的基础上， Logistic Regression的限制则要宽松很多，如果数据满徐条件独立假设，Logistic Regression能够取得很好的效果；当数据不满度条件独立假设时，Logistic Regression仍然能够通过调整参数让模型最大化的符合数据的分布，从而训练得到在现有数据集下的一个最优模型。
  -  Naive Bayes运用了比较严格的条件独立假设，为了计算 $P(y\|x)$，我们可以利用统计的方法统计数据集中 $P(x\|y)$ 和 $P(y)$ 出现的次数，从而求得 $P(x\|y)$ 和 $P(y)$。因而其所需的数据量要小一些，为 $\mathcal{O}(\log n)$. Logistic Regression 在计算时，是在整个参数空间进行线性搜索的，需要的数据集就更大，为$\mathcal{O}(n)$
 
+![此处输入图片的描述][1]
+
 ----------
 
+[1]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-29_211257.png
 
 [^1]: [GENERATIVE AND DISCRIMINATIVE CLASSIFIERS: NAIVE BAYES AND LOGISTIC REGRESSION](http://www.cs.cmu.edu/~tom/mlbook/NBayesLogReg.pdf)
 [^2]: [朴素贝叶斯 VS 逻辑回归 区别](http://blog.csdn.net/chlele0105/article/details/38922551)
