--- a/_posts/2016-03-20- LR-and-NB.md
+++ b/_posts/2016-03-20- LR-and-NB.md
@@ -13,7 +13,7 @@ categories: 机器学习
 $$\begin{align*}
 P(Y=1|X) & = \frac{P(Y=1)P(X|Y=1)}{P(Y=1)P(X|Y=1)+P(Y=0)P(X|Y=0)}\\
 & = \frac{1}{1+\cfrac{P(Y=0)P(X|Y=0)}{P(Y=1)P(X|Y=1)}}\\
-& = \frac{1}{1+\exp(\ln\frac{P(Y=0)P(X|Y=0)}{P(Y=1)P(X|Y=1)})}\\
+& = \frac{1}{1+\exp(\ln\cfrac{P(Y=0)P(X|Y=0)}{P(Y=1)P(X|Y=1)})}\\
 & = \frac{1}{1+\exp((\ln \cfrac{1-\pi}{\pi})+\sum_i\ln\cfrac{P(X_i|Y=0)}{P(X_i|Y=1)})} \tag{1}
 \end{align*}$$
 
