--- a/_posts/2016-03-27-t-Test.md
+++ b/_posts/2016-03-27-t-Test.md
@@ -47,7 +47,9 @@ $$t = \frac{\bar{d}-\mu_d}{S_{\bar{d}}}=\frac{\bar{d}-0}{S_{\bar{d}}}=\frac{\bar
 #### 非配对双体检验
 **非配对双体检验**，又称为两独立样本 t 检验(成组 t 检验)，其假设两组样本是从不同的正态分布($\mathcal{N}(\mu_1,\sigma_1^2)$,$\mathcal{N}(\mu_2,\sigma_2^2)$)采样出来的。根据两个正态分布的标准差是否相等，非配对双体检验又可以分两类。
 
- - 两总体方差 $\sigma_1^2,\sigma_2^2$ 相等,即**方差齐性**(homogeneity of variance):
+ - 两总体方差 $\sigma_1^2,\sigma_2^2$ 相等(F 检验),即**方差齐性**(homogeneity of variance):
+
+> F检验又叫方差齐性检验，用于检验两组服从正态分布的样本是否具有相同的总体方差，即方差齐性。
 
 $$\begin{align*} 
 t & = \frac{(\bar{X}_1-\bar{X}_2)-(\mu_1-\mu_2)}{S_{\bar{X}_1-\bar{X}_2}}= \frac{|\bar{X}_1-\bar{X}_2|}{S_{\bar{X}_1-\bar{X}_2}} \tag{3}\\ 
