--- a/_posts/2016-03-30-Sampling.md
+++ b/_posts/2016-03-30-Sampling.md
@@ -13,9 +13,9 @@ categories: 统计学
 ----------
 
 #### 简单随机抽样
-从总体 $N$ 个单位中随机地抽取 $n$ 个单位作为样本，每个单位被抽中的概率是相等。
+> 从总体 $N$ 个单位中随机地抽取 $n$ 个单位作为样本，每个单位被抽中的概率是相等。
 
-例如：按照“抽签法”、“随机表”法抽取访问对象，从单位人名目录中抽取对象。
+**例如**：按照“抽签法”、“随机表”法抽取访问对象，从单位人名目录中抽取对象。
 
 **优点**： 随机度高，在特质较均一的总体中，具有很高的总体代表度；是最简单的抽样技术，有标准而且简单的统计公式。
 
@@ -25,24 +25,41 @@ categories: 统计学
 ----------
 
 #### 整群抽样
-将总体全部单位分为许多个“群”，然后随机抽取若干“群”。
+>　将总体全部单位分为许多个“群”，然后随机抽取若干“群”。
 
-例如：入户调查，按地块或居委会抽样，以地块或居委会等有地域边界的群体为第一抽样单位，在选出的地块或居委会实施逐户抽样；市场调查中，最后一级抽样时，从居委会中抽取若干户，然后调查抽中户家中所有18岁以上成年人。
+**例如**：入户调查，按地块或居委会抽样，以地块或居委会等有地域边界的群体为第一抽样单位，在选出的地块或居委会实施逐户抽样；市场调查中，最后一级抽样时，从居委会中抽取若干户，然后调查抽中户家中所有18岁以上成年人。
 
-**优点**：适用于群间差异小、群内各个体差异大、可以依据外观的或地域的差异来划分的群体。
+**优点**：适用于**群间差异小、群内各个体差异大**、可以依据外观的或地域的差异来划分的群体。
 
-**缺点**：群内单位有趋同性，其精度比简单抽样为低。
+**缺点**：群内单位有趋同性，其精度比简单抽样低。
 
 
 ----------
 
 #### 分层抽样
-把调查总体分为同质的、互不交叉的层（或类型），然后在各层（或类型）中独立抽取样本。
+> 把调查总体分为同质的、互不交叉的层（或类型），然后在各层（或类型）中独立抽取样本。
 
 ![此处输入图片的描述][2]
 
-例如：调查零售店时，按照其规模大小或库存额大小分层，然后在每层中按简单随机方法抽取大型零售店若干、中型若干、小型若干；调查城市时，按城市总人口或工业生产额分出超大型城市、中型城市、小型城市等，再抽出具体的各类型城市若干。
+**例如**：调查零售店时，按照其规模大小或库存额大小分层，然后在每层中按简单随机方法抽取大型零售店若干、中型若干、小型若干；调查城市时，按城市总人口或工业生产额分出超大型城市、中型城市、小型城市等，再抽出具体的各类型城市若干。
+
+**优点**：适用于**层间有较大的异质性**，而**每层内的个体具有同质性的总体**，能提高总体估计的精确度，在样本量相同的情况下，其精度高于简单抽样和系统抽样；能保证“层”的代表性，避免抽到“差”的样本；同时，不同层可以依据情况采用不同的抽样框和抽样方法。
+
+**缺点**：要求有高质量的、能用于分层的**辅助信息**；由于需要辅助信息，抽样框的创建需要更多的费用，更为**复杂**；抽样误差估计比简单抽样和系统抽样更复杂。
 
 
-  [1]: http://7xjbdi.com1.z0.glb.clouddn.com/sampling.png
+----------
+
+#### 多阶段抽样
+> 先抽取群，但并不是调查群内的所有单位，而是再进行一步抽样，从选中的群中抽取出若干个单位进行调查。
+
+以全国性调查为例，当抽样单元为各级行政单位时，按社会发展水平分层后（或按经济发展水平，或按地理位置分层），从每层中先抽几个地区，再从抽中的地区抽市、县、村，最后再抽至户或个人。
+
+**优点**：具体整体抽样的简单易行的优点，同时，在样本量相同的情况下又整群抽样的精度高。
+
+**缺点**：计算复杂。
+
+
+
+  [1]: http://7xjbdi.com1.z0.glb.clouddn.com/sampling.png?imageView2/2/w/400
   [2]: http://7xjbdi.com1.z0.glb.clouddn.com/stra_sample.png
