--- a/_posts/2016-03-30-Sampling.md
+++ b/_posts/2016-03-30-Sampling.md
@@ -59,6 +59,15 @@ categories: 统计学
 
 **缺点**：计算复杂。
 
+----------
+
+#### 概念辨析
+**整群抽样与分层抽样**：
+
+- 分层抽样要求**各层之间**的差异很大，**层内**个体或单元差异小，而整群抽样要求**群与群之间**的差异比较小，**群内**个体或单元差异大；
+- 分层抽样的样本是从**每个层内抽取若干单元或个体**构成，而整群抽样则是要么**整群**抽取，要么整群不被抽取。
+
+如果分成两个阶段抽样的话，第一阶段全面调查，第二阶段随机抽查就是分层抽样；第一阶段随机抽查，第二阶段全面调查就是整群抽样；而两个阶段都随机调查是二阶抽样。总体可以分为很多群，抽一个或多个群进行分析是整群抽样，对不同的群抽取个体是分层抽样。
 
 
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/sampling.png?imageView2/2/w/400
