--- a/_posts/2016-03-30-Sampling.md
+++ b/_posts/2016-03-30-Sampling.md
@@ -8,10 +8,6 @@ categories: 统计学
 ---
 
 
-![此处输入图片的描述][1]
-
-----------
-
 #### 简单随机抽样
 > 从总体 $N$ 个单位中随机地抽取 $n$ 个单位作为样本，每个单位被抽中的概率是相等。
 
@@ -27,6 +23,8 @@ categories: 统计学
 #### 整群抽样
 >　将总体全部单位分为许多个“群”，然后随机抽取若干“群”。
 
+![此处输入图片的描述][2]
+
 **例如**：入户调查，按地块或居委会抽样，以地块或居委会等有地域边界的群体为第一抽样单位，在选出的地块或居委会实施逐户抽样；市场调查中，最后一级抽样时，从居委会中抽取若干户，然后调查抽中户家中所有18岁以上成年人。
 
 **优点**：适用于**群间差异小、群内各个体差异大**、可以依据外观的或地域的差异来划分的群体。
@@ -39,7 +37,7 @@ categories: 统计学
 #### 分层抽样
 > 把调查总体分为同质的、互不交叉的层（或类型），然后在各层（或类型）中独立抽取样本。
 
-![此处输入图片的描述][2]
+![此处输入图片的描述][3]
 
 **例如**：调查零售店时，按照其规模大小或库存额大小分层，然后在每层中按简单随机方法抽取大型零售店若干、中型若干、小型若干；调查城市时，按城市总人口或工业生产额分出超大型城市、中型城市、小型城市等，再抽出具体的各类型城市若干。
 
@@ -59,6 +57,7 @@ categories: 统计学
 
 **缺点**：计算复杂。
 
+
 ----------
 
 #### 概念辨析
@@ -67,8 +66,9 @@ categories: 统计学
 - 分层抽样要求**各层之间**的差异很大，**层内**个体或单元差异小，而整群抽样要求**群与群之间**的差异比较小，**群内**个体或单元差异大；
 - 分层抽样的样本是从**每个层内抽取若干单元或个体**构成，而整群抽样则是要么**整群**抽取，要么整群不被抽取。
 
-> 如果分成两个阶段抽样的话，第一阶段全面调查，第二阶段随机抽查就是分层抽样；第一阶段随机抽查，第二阶段全面调查就是整群抽样；而两个阶段都随机调查是二阶抽样。总体可以分为很多群，抽一个或多个群进行分析是整群抽样，对不同的群抽取个体是分层抽样。
+如果分成两个阶段抽样的话，第一阶段全面调查，第二阶段随机抽查就是分层抽样；第一阶段随机抽查，第二阶段全面调查就是整群抽样；而两个阶段都随机调查是二阶抽样。总体可以分为很多群，抽一个或多个群进行分析是整群抽样，对不同的群抽取个体是分层抽样。
 
 
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/sampling.png?imageView2/2/w/500
-  [2]: http://7xjbdi.com1.z0.glb.clouddn.com/stra_sample.png
+  [2]: http://7xjbdi.com1.z0.glb.clouddn.com/cluster-sampling.png
+  [3]: http://7xjbdi.com1.z0.glb.clouddn.com/stra_sample.png
