--- a/_posts/2016-03-30-Sampling.md
+++ b/_posts/2016-03-30-Sampling.md
@@ -8,8 +8,14 @@ categories: 统计学
 ---
 
 
+![此处输入图片的描述][1]
+
+----------
+
 #### 简单随机抽样
 > 从总体 $N$ 个单位中随机地抽取 $n$ 个单位作为样本，每个单位被抽中的概率是相等。
+
+![此处输入图片的描述][2]
 
 **例如**：按照“抽签法”、“随机表”法抽取访问对象，从单位人名目录中抽取对象。
 
@@ -23,7 +29,7 @@ categories: 统计学
 #### 整群抽样
 >　将总体全部单位分为许多个“群”，然后随机抽取若干“群”。
 
-![此处输入图片的描述][2]
+![此处输入图片的描述][3]
 
 **例如**：入户调查，按地块或居委会抽样，以地块或居委会等有地域边界的群体为第一抽样单位，在选出的地块或居委会实施逐户抽样；市场调查中，最后一级抽样时，从居委会中抽取若干户，然后调查抽中户家中所有18岁以上成年人。
 
@@ -37,7 +43,7 @@ categories: 统计学
 #### 分层抽样
 > 把调查总体分为同质的、互不交叉的层（或类型），然后在各层（或类型）中独立抽取样本。
 
-![此处输入图片的描述][3]
+![此处输入图片的描述][4]
 
 **例如**：调查零售店时，按照其规模大小或库存额大小分层，然后在每层中按简单随机方法抽取大型零售店若干、中型若干、小型若干；调查城市时，按城市总人口或工业生产额分出超大型城市、中型城市、小型城市等，再抽出具体的各类型城市若干。
 
@@ -48,8 +54,10 @@ categories: 统计学
 
 ----------
 
-#### 多阶段抽样
+#### 多阶段抽样(多级抽样)
 > 先抽取群，但并不是调查群内的所有单位，而是再进行一步抽样，从选中的群中抽取出若干个单位进行调查。
+
+![此处输入图片的描述][5]
 
 以全国性调查为例，当抽样单元为各级行政单位时，按社会发展水平分层后（或按经济发展水平，或按地理位置分层），从每层中先抽几个地区，再从抽中的地区抽市、县、村，最后再抽至户或个人。
 
@@ -63,6 +71,8 @@ categories: 统计学
 #### 概念辨析
 **整群抽样与分层抽样**：
 
+![此处输入图片的描述][6]
+
 - 分层抽样要求**各层之间**的差异很大，**层内**个体或单元差异小，而整群抽样要求**群与群之间**的差异比较小，**群内**个体或单元差异大；
 - 分层抽样的样本是从**每个层内抽取若干单元或个体**构成，而整群抽样则是要么**整群**抽取，要么整群不被抽取。
 
@@ -70,5 +80,8 @@ categories: 统计学
 
 
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/sampling.png?imageView2/2/w/500
-  [2]: http://7xjbdi.com1.z0.glb.clouddn.com/cluster-sampling.png?imageView2/2/w/500
-  [3]: http://7xjbdi.com1.z0.glb.clouddn.com/stra_sample.png
+  [2]: http://7xjbdi.com1.z0.glb.clouddn.com/srs.gif
+  [3]: http://7xjbdi.com1.z0.glb.clouddn.com/cluster-sampling.png
+  [4]: http://7xjbdi.com1.z0.glb.clouddn.com/stra_sample.png
+  [5]: http://7xjbdi.com1.z0.glb.clouddn.com/sampling_stages.gif
+  [6]: http://7xjbdi.com1.z0.glb.clouddn.com/cluster-sample.gif
