--- a/_posts/2016-03-30-Sampling.md
+++ b/_posts/2016-03-30-Sampling.md
@@ -12,7 +12,9 @@ categories: 统计学
 
 ----------
 
-#### 简单随机抽样
+我们重点关注下**概率抽样**[^1]。
+
+#### 简单随机抽样[^2]
 > 从总体 $N$ 个单位中随机地抽取 $n$ 个单位作为样本，每个单位被抽中的概率是相等。
 
 ![此处输入图片的描述][2]
@@ -33,7 +35,7 @@ categories: 统计学
 
 **例如**：入户调查，按地块或居委会抽样，以地块或居委会等有地域边界的群体为第一抽样单位，在选出的地块或居委会实施逐户抽样；市场调查中，最后一级抽样时，从居委会中抽取若干户，然后调查抽中户家中所有18岁以上成年人。
 
-![此处输入图片的描述][6]
+![此处输入图片的描述][4]
 
 **优点**：适用于**群间差异小、群内各个体差异大**、可以依据外观的或地域的差异来划分的群体。
 
@@ -42,10 +44,23 @@ categories: 统计学
 
 ----------
 
+#### 系统抽样(等距抽样)
+> 将总体中的各单元先按一定顺序排列，并编号，然后按照一定的规则抽样。其中最常采用的是**等距离抽样**，即根据总体单位数和样本单位计算出抽样距离（即相同的间隔），然后按相同的距离或间隔抽选样本单位。
+
+![此处输入图片的描述][5]
+
+**例如**：从1000个电话号码中抽取10个访问号码，间距为100，确定起点（起点＜间距）后每100号码抽一访问号码。
+
+**优点**：兼具操作的简便性和统计推断功能，是目前最为广泛运用的一种抽样方法。如果起点是随机确定的，总体中单元排列是随机的，等距抽样的效果近似简单抽样；与简单抽样相比，在一定条件下，样本的分布较好。
+　　
+**缺点**：抽样间隔可能遇到总体中某种未知的周期性，导致“差”的样本；未使用可能有用的抽样框辅助信息抽取样本，可能导致统计效率低。
+
+----------
+
 #### 分层抽样
 > 把调查总体分为同质的、互不交叉的层（或类型），然后在各层（或类型）中独立抽取样本。
 
-![此处输入图片的描述][4]
+![此处输入图片的描述][6]
 
 **例如**：调查零售店时，按照其规模大小或库存额大小分层，然后在每层中按简单随机方法抽取大型零售店若干、中型若干、小型若干；调查城市时，按城市总人口或工业生产额分出超大型城市、中型城市、小型城市等，再抽出具体的各类型城市若干。
 
@@ -59,7 +74,7 @@ categories: 统计学
 #### 多阶段抽样(多级抽样)
 > 先抽取群，但并不是调查群内的所有单位，而是再进行一步抽样，从选中的群中抽取出若干个单位进行调查。
 
-![此处输入图片的描述][5]
+![此处输入图片的描述][7]
 
 以全国性调查为例，当抽样单元为各级行政单位时，按社会发展水平分层后（或按经济发展水平，或按地理位置分层），从每层中先抽几个地区，再从抽中的地区抽市、县、村，最后再抽至户或个人。
 
@@ -79,9 +94,17 @@ categories: 统计学
 如果分成两个阶段抽样的话，第一阶段全面调查，第二阶段随机抽查就是分层抽样；第一阶段随机抽查，第二阶段全面调查就是整群抽样；而两个阶段都随机调查是二阶抽样。总体可以分为很多群，抽一个或多个群进行分析是整群抽样，对不同的群抽取个体是分层抽样。
 
 
+----------
+
+[^1]: [Other Effective Sampling Methods](https://faculty.elgin.edu/dkernler/statistics/ch01/1-4.html)
+[^2]: [常用的抽样方法总结](http://wenku.baidu.com/link?url=Dk6PyhzL2G2ULkiGMdbuU-S1ijzHv1Bsmg1en5the4kELdbXBZnAQA2EAW4r3YaEdIPvSpIHV9124qiaR2LTBUtXEzEpc3cXW4D_aTdlIlW)
+  
+
+
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/sampling.png?imageView2/2/w/500
   [2]: http://7xjbdi.com1.z0.glb.clouddn.com/srs.gif
-  [3]: http://7xjbdi.com1.z0.glb.clouddn.com/cluster-sampling.png
-  [4]: http://7xjbdi.com1.z0.glb.clouddn.com/stra_sample.png
-  [5]: http://7xjbdi.com1.z0.glb.clouddn.com/sampling_stages.gif
-  [6]: http://7xjbdi.com1.z0.glb.clouddn.com/cluster-sample.gif
+  [3]: http://7xjbdi.com1.z0.glb.clouddn.com/cluster-sampling.png?imageView2/2/w/350
+  [4]: http://7xjbdi.com1.z0.glb.clouddn.com/cluster-sample.gif
+  [5]: http://7xjbdi.com1.z0.glb.clouddn.com/sys-sample1.png
+  [6]: http://7xjbdi.com1.z0.glb.clouddn.com/stra_sample1.png
+  [7]: http://7xjbdi.com1.z0.glb.clouddn.com/sampling_stages.gif
