--- a/_posts/2016-03-27-t-Test.md
+++ b/_posts/2016-03-27-t-Test.md
@@ -81,7 +81,7 @@ $$t = \frac{\bar{X}-\mu_0}{S/\sqrt{n}} = 0.2887 \tag{2.1}$$
 **步骤1:** 建立检验假设，限定显著性水平.
 
 $$\begin{eqnarray*} 
-&\pmb{H}_0: u_0=1.1 &\quad\quad \pmb{H}_1: u_0 \neq 1.1 & 
+&\pmb{H}_0: \mu_0=1.1 &\quad\quad \pmb{H}_1: \mu_0 \neq 1.1 & 
 \end{eqnarray*} \tag{2.2}$$
 
 这里我们限定显著性水平为 $\alpha = 0.05$.
