--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -39,8 +39,7 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
 1. **无信息先验**（uninformative Priors） 无信息先验只包含了参数的模糊的或者一般的信息，是对后验分布**影响最小**的先验分布。很多人愿意选取无信息先验，因为这种先验与其它“主观”的先验相比更接近“客观”。通常，我们把均匀分布作为无信息先验来使用，这相当于在参数所有的可能值上边指派了相同的似然。但是无先验信息的使用也要慎重，比如有些情况下会导致不恰当的后验分布（如不可积分的后验概率密度）。
 
-2. **Jeffreys先验**(Jeffreys’ Prior：杰佛
-里先验分布) Jeffreys提出的选取先验分布的原则是一种不变原理，采用 Fisher 信息阵的平方根作为 $\theta$ 的无信息先验分布。较好地解决了无信息先验中的一个矛盾，即若对参数θ选用均匀分布，则其函数 $g(\theta)$ 往往不是均匀分布。
+2. **Jeffreys先验**(Jeffreys’ Prior：杰佛里先验分布) Jeffreys提出的选取先验分布的原则是一种不变原理，采用 Fisher 信息阵的平方根作为 $\theta$ 的无信息先验分布。较好地解决了无信息先验中的一个矛盾，即若对参数θ选用均匀分布，则其函数 $g(\theta)$ 往往不是均匀分布。
 
 3. **信息先验**（Informative Priors） 根据以前的经验、研究或专家经验得到的先验分布。
 
