--- a/_posts/2016-02-23-K-sum.md
+++ b/_posts/2016-02-23-K-sum.md
@@ -16,7 +16,7 @@ vector<int> twoSum(vector<int>& nums, int target) {
     unordered_map<int,bool> mapping;
     for(int i = 0; i < nums.size(); ++i)
         mapping[nums[i]] = i;
-        
+    
     vector<int> results;
     for(int i = 0; i < nums.size(); i++){
         int gap = target - nums[i];
@@ -29,6 +29,8 @@ vector<int> twoSum(vector<int>& nums, int target) {
     return results;
 }
 {% endhighlight %}
+
+> 需要注意的是，对于含重复元素的序列，比如　numbers={2，2，5，6}，target = 4的情况，可能大家会想　mapping里面的　<2, 1> 会将<2, 0> 覆盖掉，这样是不是就不行了？　其实覆盖也没有关系，后面扫描时用的是第一个２，hash 获得的元素位置是第二个2。
 
 - 解法二，双指针扫描
 将数组排序，然后双指针从前后往中间扫描，时间复杂度O(n*logn)
