--- a/_posts/2016-02-23-K-sum.md
+++ b/_posts/2016-02-23-K-sum.md
@@ -46,8 +46,10 @@ vector<int> twoSum(vector<int>& nums, int target) {
 
 
 #### 3-sum
+**解题思路**：先排序，固定一个数，转化为　2-sum，利用双指针左右夹逼
 
 {% highlight c++ %}
+//注意去重
 vector<vector<int>> threeSum(vector<int>& nums) {
     vector<vector<int>> results;
     if(nums.size() < 3) return results;
