--- a/_posts/2016-02-23-K-sum.md
+++ b/_posts/2016-02-23-K-sum.md
@@ -63,16 +63,49 @@ vector<vector<int>> threeSum(vector<int>& nums) {
         while(j < k){
             if(nums[i]+nums[j]+nums[k] < target){
                 ++j;
-                while(nums[j] == nums[j-1] && j < k) ++j;
+                while(nums[j] == nums[j-1] && j < k) ++j; //去重
             }else if(nums[i]+nums[j]+nums[k] > target){
                 --k;
-                while(nums[k] == nums[k+1] && j < k) --k;
+                while(nums[k] == nums[k+1] && j < k) --k; //去重
             }else{
                 results.push_back({nums[i],nums[j],nums[k]});
                 ++j;
                 --k;
-                while(nums[j] == nums[j-1] && nums[k] == nums[k+1] && j < k) ++j;
+                while(nums[j] == nums[j-1] && nums[k] == nums[k+1] && j < k) ++j; //去重
             }
+        }
+    }
+    return results;
+}
+{% endhighlight %}
+
+
+----------
+
+#### 3-Sum Closest 
+与　3-Sum　解法类似，但不用考虑去重了。
+
+{% highlight c++ %}
+int threeSumClosest(vector<int>& nums, int target) {
+    int results = 0;
+    sort(nums.begin(),nums.end());
+
+    int min_gap = INT_MAX;
+    for(auto a = nums.begin(); a!=prev(nums.end(),2); ++a){
+        auto b = next(a);
+        auto c = prev(nums.end(),1);
+        while(b != c){
+            int sum = *a + *b + *c;
+            int gap = abs(sum - target);
+            if(gap < min_gap){
+                min_gap = gap;
+                results = sum;
+            }
+
+            if(sum >target)
+                --c;
+            else
+                ++b;
         }
     }
     return results;
