--- a/_posts/2016-02-23-K-sum.md
+++ b/_posts/2016-02-23-K-sum.md
@@ -111,3 +111,18 @@ int threeSumClosest(vector<int>& nums, int target) {
     return results;
 }
 {% endhighlight %}
+
+----------
+
+#### 多维数组
+>使用范围 for 语句处理多维数组，除了最内层的循环外，其它所有循环的控制变量都应该是引用类型。因为编译器会将数组形式的元素转换成指向该数组内首元素的指针，这样　row　的类型就是 int*　了，内层循环就不合法了。
+
+{% highlight c++ %}
+for(auto &row : ia)
+    for(auto col : row){
+        col = cnt;
+        ++cnt;
+}
+{% endhighlight %}
+
+  [1]: http://7xjbdi.com1.z0.glb.clouddn.com/c_string.png?imageView2/2/w/300
