--- a/_posts/2016-02-24-Leetcode.md
+++ b/_posts/2016-02-24-Leetcode.md
@@ -9,7 +9,6 @@ categories: 数据结构与算法
 
 
 ### 线性表
-
 #### 04.23
 - [Remove Duplicates from Sorted Array](https://leetcode.com/problems/remove-duplicates-from-sorted-array/) 双指针
 - [Remove Duplicates from Sorted Array II](https://leetcode.com/problems/remove-duplicates-from-sorted-array-ii/) 双指针
@@ -24,6 +23,14 @@ categories: 数据结构与算法
 - [Longest Consecutive Sequence](https://leetcode.com/problems/longest-consecutive-sequence/) hash
 - [Two Sum](https://leetcode.com/problems/two-sum/) hash
 - [Three Sum](https://leetcode.com/problems/3sum/)  排序　+ 双指针
-- [3Sum Closest](https://leetcode.com/submissions/detail/59874039/)　排序　+ 双指针
+- [3Sum Closest](https://leetcode.com/problems/3sum-closest/)　排序　+ 双指针
 - [Remove Element ](https://leetcode.com/problems/remove-element/)　　双指针
 
+
+----------
+
+#### 04.25
+- [Reverse Linked List](https://leetcode.com/problems/reverse-linked-list/)
+- [Remove Duplicates from Sorted List](https://leetcode.com/problems/remove-duplicates-from-sorted-list/)
+- [Remove Duplicates from Sorted List II](https://leetcode.com/problems/remove-duplicates-from-sorted-list-ii/)
+- [Spiral Matrix](https://leetcode.com/problems/spiral-matrix/)
