--- a/_posts/2016-02-24-Leetcode.md
+++ b/_posts/2016-02-24-Leetcode.md
@@ -11,9 +11,9 @@ categories: 数据结构与算法
 ### 线性表
 
 #### 04.23
-- [Remove Duplicates from Sorted Array](https://leetcode.com/problems/remove-duplicates-from-sorted-array/) 双指针
-- [Remove Duplicates from Sorted Array II](https://leetcode.com/problems/remove-duplicates-from-sorted-array-ii/) 双指针
-- [Search in Rotated Sorted Array ](https://leetcode.com/problems/search-in-rotated-sorted-array/) 无序化有序（二分查找）
+- [Remove Duplicates from Sorted Array](https://leetcode.com/problems/remove-duplicates-from-sorted-array/):双指针
+- [Remove Duplicates from Sorted Array II](https://leetcode.com/problems/remove-duplicates-from-sorted-array-ii/):双指针
+- [Search in Rotated Sorted Array ](https://leetcode.com/problems/search-in-rotated-sorted-array/):无序化有序（二分查找）
 - [Search in Rotated Sorted Array II](https://leetcode.com/problems/search-in-rotated-sorted-array-ii/)
 - [Median of Two Sorted Arrays](https://leetcode.com/problems/median-of-two-sorted-arrays/)（利用已排序的特性，逐次淘汰）
 
@@ -21,11 +21,11 @@ categories: 数据结构与算法
 ----------
 
 #### 04.24
-- [Longest Consecutive Sequence](https://leetcode.com/problems/longest-consecutive-sequence/) hash
-- [Two Sum](https://leetcode.com/problems/two-sum/) hash
-- [Three Sum](https://leetcode.com/problems/3sum/)  排序　+ 双指针
-- [3Sum Closest](https://leetcode.com/problems/3sum-closest/)　排序　+ 双指针
-- [Remove Element ](https://leetcode.com/problems/remove-element/)　　双指针
+- [Longest Consecutive Sequence](https://leetcode.com/problems/longest-consecutive-sequence/):hash
+- [Two Sum](https://leetcode.com/problems/two-sum/):hash
+- [Three Sum](https://leetcode.com/problems/3sum/):排序　+ 双指针
+- [3Sum Closest](https://leetcode.com/problems/3sum-closest/):排序　+ 双指针
+- [Remove Element ](https://leetcode.com/problems/remove-element/):双指针
 
 
 ----------
