--- a/_posts/2016-02-24-Leetcode.md
+++ b/_posts/2016-02-24-Leetcode.md
@@ -35,3 +35,17 @@ categories: 数据结构与算法
 - [Remove Duplicates from Sorted List](https://leetcode.com/problems/remove-duplicates-from-sorted-list/)
 - [Remove Duplicates from Sorted List II](https://leetcode.com/problems/remove-duplicates-from-sorted-list-ii/)
 - [Spiral Matrix](https://leetcode.com/problems/spiral-matrix/)
+- [Spiral Matrix II](https://leetcode.com/problems/spiral-matrix-ii/)
+
+----------
+
+#### 04.26
+- [Add Two Numbers](https://leetcode.com/problems/add-two-numbers/)
+
+
+----------
+
+#### 04.27
+- [Partition List](https://leetcode.com/problems/partition-list/)
+- [Reverse Linked List II](https://leetcode.com/problems/reverse-linked-list-ii/)
+- [Rotate List](https://leetcode.com/problems/rotate-list/)
