--- a/_posts/2016-06-20-cluster.md
+++ b/_posts/2016-06-20-cluster.md
@@ -14,6 +14,7 @@ categories: 机器学习
 ---
 
 ### 基于划分
+
 #### K-means
 
 **基本思想**： K-means算法首先随机地选择个对象，每个对象初始地代表一个簇的平均值或中心。对剩余的每个对象根据其与各个簇中心的距离（之前的各种距离的定义，在这里派上了用场，可以根据实际需求来选择不同的距离定义），将它赋给最近的簇。然后重新计算每个簇的平均值。这个过程不断重复，直到准则函数函数收敛（准则函数常常使用最小均方误差）。
@@ -23,10 +24,14 @@ categories: 机器学习
 假定输入样本为 $S = x_1,x_2,\cdots,x_m$
 
 - 选定初始的k个类别中心，$\mu_1,\mu_2,\cdots,\mu_k$
-- 对于每个样本，将其标记为距离类别中心最近的类别，
+- 对于每个样本，将其标记为距离类别中心最近的类别:
+
 $$\text{label}_i = \underset{1 \le j \le k}{\arg \min}||x_i-\mu_j||$$
+
 - 将每个类别中心更新为隶属于该类别的所有样本的均值
+
 $$\mu_j = \frac{1}{|c_j|}\sum_{i \in C_j} x_i$$
+
 - 重复最后两步，直到类别中心的变化小于某阈值
 
 ![][1]
