--- a/_posts/2016-06-20-cluster.md
+++ b/_posts/2016-06-20-cluster.md
@@ -11,7 +11,7 @@ categories: 机器学习
 
 ![整体框图][5]
 
-主要总结下各类算法的思想，以及优缺点。
+> 主要总结下各类算法的思想，以及优缺点，不要太在意细节。
 
 ---
 
@@ -36,10 +36,15 @@ $$\mu_j = \frac{1}{|c_j|}\sum_{i \in C_j} x_i$$
 
 - 重复最后两步，直到类别中心的变化小于某阈值
 
-![][1]
-
 ---
 
+![][1]
+
+#### K-means 和 EM
+
+K-means也被称为hard EM（GMM为soft EM），整体思想与EM是相通的。
+
+> 我们一开始不知道每个样例$x^{(i)}$对应隐含变量也就是最佳类别$c^{(i)}$。最开始可以随便指定一个$c^{(i)}$给它，然后为了让$P(x,y)$最大（这里是要让$J$最小），我们求出在给定$c$情况下，$J$最小时的$\mu$（前面提到的其他未知参数），然而此时发现，可以有更好的$c^{(i)}$（质心与样例$x^{(i)}$距离最小的类别）指定给样例$x^{(i)}$，那么$c^{(i)}$得到重新调整，上述过程就开始重复了，直到没有更好的$c^{(i)}$指定。这样从K-means里我们可以看出它其实就是EM的体现，E步是确定隐含类别变量$c^{(i)}$，M步更新其他参数$\mu$来使$J$最小化。
 
 ---
 
