--- a/_posts/2016-06-20-cluster.md
+++ b/_posts/2016-06-20-cluster.md
@@ -40,11 +40,24 @@ $$\mu_j = \frac{1}{|c_j|}\sum_{i \in C_j} x_i$$
 
 ![][1]
 
+---
+
 #### K-means 和 EM
 
 K-means也被称为hard EM（GMM为soft EM），整体思想与EM是相通的。
 
-> 我们一开始不知道每个样例$x^{(i)}$对应隐含变量也就是最佳类别$c^{(i)}$。最开始可以随便指定一个$c^{(i)}$给它，然后为了让$P(x,y)$最大（这里是要让$J$最小），我们求出在给定$c$情况下，$J$最小时的$\mu$（前面提到的其他未知参数），然而此时发现，可以有更好的$c^{(i)}$（质心与样例$x^{(i)}$距离最小的类别）指定给样例$x^{(i)}$，那么$c^{(i)}$得到重新调整，上述过程就开始重复了，直到没有更好的$c^{(i)}$指定。这样从K-means里我们可以看出它其实就是EM的体现，E步是确定隐含类别变量$c^{(i)}$，M步更新其他参数$\mu$来使$J$最小化。
+下面我们来解释一下，它俩是如何联系到一起的。
+
+> 我们一开始不知道每个样例$x^{(i)}$对应隐含变量也就是最佳类别$c^{(i)}$。最开始可以随便指定一个$c^{(i)}$给它，然后为了让$P(x,y)$最大（这里是要让$J$最小），我们求出在给定$c$情况下，$J$最小时的$\mu$（前面提到的其他未知参数），然而此时发现，可以有更好的$c^{(i)}$（质心与样例$x^{(i)}$距离最小的类别）指定给样例$x^{(i)}$，那么$c^{(i)}$得到重新调整，上述过程就开始重复了，直到没有更好的$c^{(i)}$指定。这样从K-means里我们可以看出它其实就是EM的体现，E步是确定隐含类别变量$c^{(i)}$，M步更新其他参数$\mu$来使$J$最小化[^3]。
+
+还记得我们前面一直强调的通俗版EM解说吗？
+
+> 简版：猜（E-step）,反思（M-step）,重复；   
+啰嗦版：你知道一些东西（观察的到的数据），你不知道一些东西（隐藏变量），你很好奇，想知道点那些不了解的东西。怎么办呢？     
+你根据一些假设（parameter）先猜（E-step），把那些不知道的东西都猜出来，假装你全都知道了;      
+然后有了这些猜出来的数据，你反思一下，更新一下你的假设（parameter）,   
+让你观察到的数据更加可能(Maximize likelihood; M-step);    
+然后再猜，再反思，最后，你就得到了一个可以解释整个数据的假设了。    
 
 ---
 
@@ -56,3 +69,4 @@ K-means也被称为hard EM（GMM为soft EM），整体思想与EM是相通的。
 
 [^1]: [聚类方法](https://www.zybuluo.com/frank-shaw/note/117235)
 [^2]: [聚类算法初探（五）DBSCAN](http://blog.csdn.net/itplus/article/details/10088625)
+[^3]: [K-means聚类算法](http://www.cnblogs.com/jerrylead/archive/2011/04/06/2006910.html)
