--- a/_posts/2016-06-20-cluster.md
+++ b/_posts/2016-06-20-cluster.md
@@ -61,6 +61,22 @@ K-means也被称为hard EM（GMM为soft EM），整体思想与EM是相通的。
 
 ---
 
+#### K-means优缺点
+
+**优点**
+
+- 简单，易于实现
+- 当结果簇是密集的，效果较好
+
+**缺点**
+
+- k值选择
+- 对初值敏感，对于不同的初始值，可能会导致不同结果(K-means++)
+- 不适合于发现非凸形状的簇或者大小差别很大的簇
+- 不适合于发现非凸面形状的簇或者大小差别很大的簇
+
+---
+
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/kmeans_2.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/hierarchical-clustering-agnes-diana.png
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN-Illustration.svg.png
