--- a/_posts/2016-06-20-cluster.md
+++ b/_posts/2016-06-20-cluster.md
@@ -68,12 +68,14 @@ K-means也被称为hard EM（GMM为soft EM），整体思想与EM是相通的。
 - 简单，易于实现
 - 当结果簇是密集的，效果较好
 
+---
+
 **缺点**
 
 - k值选择
 - 对初值敏感，对于不同的初始值，可能会导致不同结果(K-means++)
 - 不适合于发现非凸形状的簇或者大小差别很大的簇
-- 不适合于发现非凸面形状的簇或者大小差别很大的簇
+- 对躁声和孤立点数据敏感（异常点检测）
 
 ---
 
