--- a/_posts/2016-06-20-cluster.md
+++ b/_posts/2016-06-20-cluster.md
@@ -79,11 +79,22 @@ K-means也被称为hard EM（GMM为soft EM），整体思想与EM是相通的。
 
 ---
 
+#### 谱聚类
+
+谱聚类(Spectral Clustering)是一种基于图论的聚类方法，将带权无向图划分为两个或两个以上的最优子图，使子图内部尽量相似，而子图间距离尽量距离较远。
+
+首先我们需要根据数据建立Graph，Graph的每一个节点对应一个数据点，边的权重用于表示数据之间的相似度（高斯距离），我们通常采用的是mutual K-nearest-neighbor graph（你是我的n近邻，你也必须是我的n近邻才算）。
+
+![][6]
+
+---
+
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/kmeans_2.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/hierarchical-clustering-agnes-diana.png
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN-Illustration.svg.png
 [4]:http://7xjbdi.com1.z0.glb.clouddn.com/delta_density_peak.png
 [5]:http://7xjbdi.com1.z0.glb.clouddn.com/%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95.png
+[6]:http://7xjbdi.com1.z0.glb.clouddn.com/mknngraph.png?imageView2/2/w/500
 
 [^1]: [聚类方法](https://www.zybuluo.com/frank-shaw/note/117235)
 [^2]: [聚类算法初探（五）DBSCAN](http://blog.csdn.net/itplus/article/details/10088625)
