--- a/_posts/2016-06-20-cluster.md
+++ b/_posts/2016-06-20-cluster.md
@@ -83,13 +83,21 @@ K-means也被称为hard EM（GMM为soft EM），整体思想与EM是相通的。
 
 谱聚类(Spectral Clustering)是一种基于图论的聚类方法，将带权无向图划分为两个或两个以上的最优子图，使子图内部尽量相似，而子图间距离尽量距离较远。
 
+---
+
 首先我们需要根据数据建立Graph，Graph的每一个节点对应一个数据点，边的权重用于表示数据之间的相似度（高斯距离），我们通常采用mutual K-nearest-neighbor graph（也就是说只有我是你的n近邻，你也必须是我的n近邻的点才算）。
 
 ![][6]
 
-剩下的问题就变为求解优化问题：
+---
+
+剩下就变为求解下面优化问题：
 
 $$\min cut(A_1,\cdots,A_k) = \frac{1}{2}\sum_{i=1}^{k} W(A_i,\bar{A}_i)$$
+
+上面的式子表示的是进行分割时去掉的边的权值总和，但是这样做往往不能得到最佳划分，它只是一味的考虑被切掉边的权重，没有考虑到划分之后各类别本身的特性，容易得到一些孤立点团簇。
+
+![][7]
 
 ---
 
@@ -99,6 +107,7 @@ $$\min cut(A_1,\cdots,A_k) = \frac{1}{2}\sum_{i=1}^{k} W(A_i,\bar{A}_i)$$
 [4]:http://7xjbdi.com1.z0.glb.clouddn.com/delta_density_peak.png
 [5]:http://7xjbdi.com1.z0.glb.clouddn.com/%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95.png
 [6]:http://7xjbdi.com1.z0.glb.clouddn.com/mknngraph.png?imageView2/2/w/400
+[7]:http://7xjbdi.com1.z0.glb.clouddn.com/smallest_cut.png?imageView2/2/w/350
 
 [^1]: [聚类方法](https://www.zybuluo.com/frank-shaw/note/117235)
 [^2]: [聚类算法初探（五）DBSCAN](http://blog.csdn.net/itplus/article/details/10088625)
