--- a/_posts/2016-06-20-cluster.md
+++ b/_posts/2016-06-20-cluster.md
@@ -102,11 +102,11 @@ $$\min cut(A_1,\cdots,A_k) = \frac{1}{2}\sum_{i=1}^{k} W(A_i,\bar{A}_i)$$
 为了能够让每个类都有合理的大小，又提出了RadioCut和NCut:
 
 \begin{align*}
-RadioCut(A_1,\cdots,A_k) & = \frac{1}{2}\sum_{i=1}^{k}\frac{W(A_i,\bar{A}_i)}{|A_i|}  \\
+RadioCut(A_1,\cdots,A_k) & = \frac{1}{2}\sum_{i=1}^{k}\frac{W(A_i,\bar{A}_i)}{\|A_i\|}  \\
 NCut(A_1,\cdots,A_k) & = \frac{1}{2}\sum_{i=1}^{k}\frac{W(A_i,\bar{A}_i)}{vol(A_i)}
 \end{align*}
 
-其中，$|A_i|$表示$A_i$中包含的顶点数目，$vol(A)=\sum_{i \in A}W_{ij}$，这两个指标都是对团簇大小的一种衡量。
+其中，$\|A_i\|$表示$A_i$中包含的顶点数目，$vol(A)=\sum_{i \in A}W_{ij}$，这两个指标都是对团簇大小的一种衡量。
 
 ---
 
