--- a/_posts/2016-06-20-cluster.md
+++ b/_posts/2016-06-20-cluster.md
@@ -112,6 +112,16 @@ $$
 
 ---
 
+然后呢，要解决这种NP-hard的优化问题，就得提到拉普拉斯矩阵，这里有机会我们在回来解说。
+
+用拉普拉斯矩阵一些性质转换之后，整个聚类过程可以总结为：
+
+
+
+![][8]
+
+---
+
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/kmeans_2.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/hierarchical-clustering-agnes-diana.png
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN-Illustration.svg.png
@@ -119,6 +129,7 @@ $$
 [5]:http://7xjbdi.com1.z0.glb.clouddn.com/%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95.png
 [6]:http://7xjbdi.com1.z0.glb.clouddn.com/mknngraph.png?imageView2/2/w/400
 [7]:http://7xjbdi.com1.z0.glb.clouddn.com/smallest_cut.png?imageView2/2/w/350
+[8]:http://7xjbdi.com1.z0.glb.clouddn.com/sp_cluster.png?imageView2/2/w/500
 
 [^1]: [聚类方法](https://www.zybuluo.com/frank-shaw/note/117235)
 [^2]: [聚类算法初探（五）DBSCAN](http://blog.csdn.net/itplus/article/details/10088625)
