--- a/_posts/2016-06-20-cluster.md
+++ b/_posts/2016-06-20-cluster.md
@@ -2,7 +2,7 @@
 published: true
 author: Charles
 layout: post
-title:  "聚类算法总结"
+title:  "聚类算法总结（1）"
 date:   2016-06-20 14:28
 categories: 机器学习
 ---
