--- a/_posts/2016-06-20-cluster.md
+++ b/_posts/2016-06-20-cluster.md
@@ -15,6 +15,8 @@ categories: 机器学习
 
 ---
 
+> 聚类就是对大量**未标注**的数据集，按数据的**内在相似性**将数据集划分为多个类别，使得类别内的数据相似性尽可能大，而各类别间的数据相似性尽可能小。
+
 ### 基于划分
 
 #### K-means
@@ -81,7 +83,7 @@ K-means也被称为hard EM（GMM为soft EM），整体思想与EM是相通的。
 
 #### 谱聚类
 
-谱聚类(Spectral Clustering)是一种基于图论的聚类方法，将带权无向图划分为两个或两个以上的最优子图，使子图内部尽量相似，而子图间距离尽量距离较远。
+> 指导思想：谱聚类(Spectral Clustering)是一种基于图论的聚类方法，将带权无向图划分为两个或两个以上的最优子图，使子图内部尽量相似，而子图间距离尽量距离较远。
 
 ---
 
