--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -2,7 +2,7 @@
 published: true
 author: Charles
 layout: post
-title:  "聚类算法总结（2）"
+title:  "聚类算法总结(2)"
 date:   2016-06-21 14:28
 categories: 机器学习
 ---
