--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -11,17 +11,26 @@ categories: 机器学习
 
 ---
 
-> 聚类就是对大量**未标注**的数据集，按数据的**内在相似性**将数据集划分为多个类别，使得类别内的数据相似性尽可能大，而各类别间的数据相似性尽可能小。
-
 ### 基于密度
+
+> 核心思想：用一个点的$\epsilon$邻域内的邻居点数衡量该点所在空间的密度，可以发现任意形状的聚类，且对噪声数据不敏感
 
 #### DBSCAN
 
+DBSCAN算法有两个重要的参数：Eps 和 MinPts。前者为定义密度时的邻域半径，后者为定义核心点所拥有的最小邻居数。
 
+我们先对数据点进行分类，邻域内数据点数：$\ro(x) \ge MinPts$，我们称之为核心点。核心点邻域内的非核心点我们成为边界点，其它的就是噪声点，不在任何核心点的邻域内，看图。
+
+![数据点分类][2]
+
+> 通俗地讲，核心点对应稠密区域内部的点，边界点对应稠密区域边缘的点，而噪声点对应稀疏区域中的点。
+
+我们如何来聚类呢
 
 ---
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95.png
+[2]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN-Illustration.svg.png?imageView2/2/w/400
 
 
 [^1]: [聚类方法](https://www.zybuluo.com/frank-shaw/note/117235)
