--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -19,7 +19,7 @@ categories: 机器学习
 
 #### DBSCAN
 
-DBSCAN算法有两个重要的参数：Eps 和 MinPts。前者为定义密度时的邻域半径，后者为定义核心点所拥有的最小邻居数。
+DBSCAN算法有两个重要的参数：Eps 和 MinPts。前者为定义密度时的邻域半径，后者定义为核心点所拥有的最小邻居数。
 
 我们先对数据点进行分类，邻域内数据点数：$\rho(x) \ge MinPts$，我们称之为核心点。核心点邻域内的非核心点我们成为边界点，其它的就是噪声点，不在任何核心点的邻域内，看图。
 
@@ -32,7 +32,7 @@ DBSCAN算法有两个重要的参数：Eps 和 MinPts。前者为定义密度时
 ---
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95.png
-[2]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN-Illustration.svg.png?imageView2/2/w/400
+[2]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN.svg.png?imageView2/2/w/400
 
 
 [^1]: [聚类方法](https://www.zybuluo.com/frank-shaw/note/117235)
