--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -13,7 +13,7 @@ categories: 机器学习
 
 ### 基于密度
 
-> 核心思想：用一个点的$\epsilon$邻域内的邻居点数衡量该点所在空间的密度，可以发现任意形状的聚类，且对噪声数据不敏感
+> 核心思想：用一个点的$\epsilon$邻域内的邻居点数衡量该点所在空间的密度，可以发现任意形状的聚类，且对噪声数据不敏感.
 
 ---
 
@@ -27,7 +27,7 @@ DBSCAN算法有两个重要的参数：Eps 和 MinPts。前者为定义密度时
 
 > 通俗地讲，核心点对应稠密区域内部的点，边界点对应稠密区域边缘的点，而噪声点对应稀疏区域中的点。
 
-
+算法实现也非常简单，我们先随机的从某个核心点出发，将它邻域内的点加入我们的seed_list，自身输出到结果列表，打上cluster标签，然后从seed_list中取出一个点，如果是非核心点，丢到结果列表即可，如果是核心点，则还要将其邻域内的点加到seed_list，循环直到seed_list清空，则分完一类，然后在从剩下未处理的核心节点挑一个，继续，直到所有核心节点都被处理完，剩下的未访问的点就是噪声点。
 
 ---
 
