--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -31,10 +31,13 @@ DBSCAN算法有两个重要的参数：Eps 和 MinPts。前者为定义密度时
 
 算法实现也非常简单，我们先随机的从某个核心点出发，将它邻域内的点加入我们的seed_list，自身输出到结果列表，打上cluster标签；然后从seed_list中取出一个点，如果是非核心点，丢到结果列表即可，如果是核心点，则还要将其邻域内的点加到seed_list，循环直到seed_list清空，则分完一类；然后在从剩下未处理的核心节点挑一个，继续，直到所有核心节点都被处理完，剩下的未访问的点就是噪声点。
 
+![数据点分类][3]
+
 ---
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN.svg.png?imageView2/2/w/400
+[3]:http://7xjbdi.com1.z0.glb.clouddn.com/dbscan-example.png?imageView2/2/w/400
 
 
 [^1]: [聚类方法](https://www.zybuluo.com/frank-shaw/note/117235)
