--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -35,9 +35,22 @@ DBSCAN算法有两个重要的参数：Eps 和 MinPts。前者为定义密度时
 
 ---
 
+**优点：**
+
+- 不需要事先指定cluster的数目
+- 可以发现任意形状的cluster
+- 能够找出数据中的噪声点，且对噪声不敏感
+
+**缺点：**
+
+- DBSCAN不适用于数据集密度差异很大的情形
+
+![数据点分类][4]
+
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN.svg.png?imageView2/2/w/400
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/dbscan-example.png?imageView2/2/w/400
+[4]:http://7xjbdi.com1.z0.glb.clouddn.com/dbscan_drawback.gif
 
 
 [^1]: [聚类方法](https://www.zybuluo.com/frank-shaw/note/117235)
