--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -47,6 +47,20 @@ DBSCAN算法有两个重要的参数：Eps 和 MinPts。前者为定义密度时
 
 ![数据点分类][4]
 
+---
+
+#### OPTICS
+
+OPTICS可以视为DBSCAN算法的一种改进算法，它并不显示地生成数据聚类，而是为聚类分析生成一个增广的簇排序。这个排序代表了各样本点基于密度的聚类结果，如以可达距离为纵轴，样本点输出次序为横轴的坐标轴，包含的信息等价于从一个广泛的参数设置所获得的基于密度的聚类。
+
+OPTICS引入了两个额外的概念：核心距离和可达距离。
+
+- 一个对象$p$的核心距离是使得其成为核心对象的最小半径，如果$p$不是核心点，其可信距离没有定义。
+
+$$$$
+
+
+
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN.svg.png?imageView2/2/w/400
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/dbscan-example.png?imageView2/2/w/400
