--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -57,7 +57,13 @@ OPTICS引入了两个额外的概念：核心距离和可达距离。
 
 - 一个对象$p$的核心距离是使得其成为核心对象的最小半径，如果$p$不是核心点，其可信距离没有定义。
 
-$$$$
+$$
+cd(x) =
+\begin{cases}
+UNDEFINED   &  \text{若$|N_{\epsilon}(x)|<\mathcal{M}$；} \\
+d(x,N_{\epsilon}^{\mathcal{M}}(x)) &  \text{若$|N_{\epsilon}(x)|\ge \mathcal{M}$}
+\end{cases}
+$$
 
 
 
