--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -87,13 +87,21 @@ $$
 
 其中 $X$ 是原始的点的数据集合，$P$ 作为最后输出结果的点集的有序序列，seedlist 是一个无重复元素的队列， 保存了当前已找到但是还没处理过的属于同一类别的点的集合。算法首先遍历输入的点集 $X $，找到一个核心点，如果找不到，则直接结束算法，如果找到一个点 x 为核心点， 则设置 $x$ 的核心距离以及可达距离并将其加入输出序列 $P$，将其所有邻点加入队列 seedlist。 之后从队列 seedlist 中找出**可达距离**最小的点 $y$，将其加入输出序列，如果 $y$ 也是核心点， 则将 $y$ 的所有邻点加入到并且更新队列 seedlist。重复以上步骤直到处理完所有的点。
 
+---
+
 **处理流程：**
 
 ![数据点分类][7]
 
 ---
 
+上面的算法处理完后，我们得到了输出结果序列，每个节点的可达距离和核心距离。我们以可达距离为纵轴，样本点输出次序为横轴进行可视化，
+
 ![数据点分类][6]
+
+各个类别进行了很好的区分，每个团簇的深浅代表了团簇的紧密程度，我们可以在这基础上采用DBSCAN（选取最有的Eps）或层次聚类方法对数据进行聚类。
+
+![数据点分类][8]
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN.svg.png?imageView2/2/w/400
@@ -102,6 +110,7 @@ $$
 [5]:http://7xjbdi.com1.z0.glb.clouddn.com/optics_cd.png?imageView2/2/w/500
 [6]:http://7xjbdi.com1.z0.glb.clouddn.com/OPTICS.svg.png
 [7]:http://7xjbdi.com1.z0.glb.clouddn.com/optics_steps.png?imageView2/2/w/500
+[8]:http://7xjbdi.com1.z0.glb.clouddn.com/optics_2.png?imageView2/2/w/500
 
 
 [^1]: [聚类方法](https://www.zybuluo.com/frank-shaw/note/117235)
