--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -51,7 +51,7 @@ DBSCAN算法有两个重要的参数：Eps 和 MinPts。前者为定义密度时
 
 #### OPTICS
 
-OPTICS可以视为DBSCAN算法的一种改进算法，它并不显示地生成数据聚类，而是为聚类分析生成一个增广的簇排序。这个排序代表了各样本点基于密度的聚类结果，如以可达距离为纵轴，样本点输出次序为横轴的坐标轴，包含的信息等价于从一个广泛的参数设置所获得的基于密度的聚类。
+OPTICS可以视为DBSCAN算法的一种改进算法，它并不显示地生成数据聚类，而是为聚类分析生成一个增广的簇排序。这个排序代表了各样本点基于密度的聚类结果，如以可达距离为纵轴，样本点输出次序为横轴的坐标轴，包含的信息等价于从一个广泛的参数设置所获得的基于密度的聚类[^1]。
 
 > OPTICS引入了两个额外的概念：核心距离和可达距离。
 
@@ -85,11 +85,11 @@ $$
 
 ---
 
-其中 $X$ 是原始的点的数据集合，$P$ 作为最后输出结果的点集的有序序列，seedlist 是一个无重复元素的队列， 保存了当前已找到但是还没处理过的属于同一类别的点的集合。算法首先遍历输入的点集 $X $，找到一个核心点，如果找不到，则直接结束算法，如果找到一个点 x 为核心点， 则设置 $x$ 的核心距离以及可达距离并将其加入输出序列 $P$，将其所有邻点加入队列 seedlist。 之后从队列 seedlist 中找出**可达距离**最小的点 $y$，将其加入输出序列，如果 $y$ 也是核心点， 则将 $y$ 的所有邻点加入到并且更新队列 seedlist。重复以上步骤直到处理完所有的点。
+其中 $X$ 是原始的点的数据集合，$P$ 作为最后输出结果的点集的有序序列，seedlist 是一个无重复元素的队列， 保存了当前已找到但是还没处理过的属于同一类别的点的集合。算法首先遍历输入的点集 $X $，找到一个核心点，如果找不到，则直接结束算法，如果找到一个点 x 为核心点， 则设置 $x$ 的核心距离以及可达距离并将其加入输出序列 $P$，将其所有邻点加入队列 seedlist。 之后从队列 seedlist 中找出**可达距离**最小的点 $y$，将其加入输出序列，如果 $y$ 也是核心点， 则将 $y$ 的所有邻点加入到并且更新队列 seedlist。重复以上步骤直到处理完所有的点[^2]。
 
 ---
 
-**处理流程：**
+**处理流程[^3]：**
 
 ![数据点分类][7]
 
@@ -119,6 +119,6 @@ $$
 [8]:http://7xjbdi.com1.z0.glb.clouddn.com/optics_2.png?imageView2/2/w/500
 
 
-[^1]: [聚类方法](https://www.zybuluo.com/frank-shaw/note/117235)
-[^2]: [聚类算法初探（五）DBSCAN](http://blog.csdn.net/itplus/article/details/10088625)
-[^3]: [K-means聚类算法](http://www.cnblogs.com/jerrylead/archive/2011/04/06/2006910.html)
+[^1]: [Clustering：Model-Based Algorithm](http://isilic.iteye.com/blog/1829011)
+[^2]: [Parallel OPTICS － 密度聚类算法Spark MLlib上的实现](http://www.hansight.com/blog-Parallel-OPTICS.html)
+[^3]: [OPTICS: Ordering Points To Identify the Clustering Structure](http://www.crest.iu.edu/~chemuell/projects/presentations/optics-v1.pdf)
