--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -101,13 +101,15 @@ $$
 
 ---
 
-每个团簇的深浅代表了团簇的紧密程度，我们可以在这基础上采用DBSCAN（选取最有的Eps）或层次聚类方法对数据进行聚类。
+每个团簇的深浅代表了团簇的**紧密程度**，我们可以在这基础上采用DBSCAN（选取最有的Eps）或层次聚类方法对数据进行聚类。
 
 ![数据点分类][8]
 
 ---
 
-基于OPTICS算法扩展有很多，如OPTICS-OF用来检测异常值(Outliar Detection)；DeLi-Clu算法来消除eps参数，提供比OPTICS更好的性能指标；HiSC算法将其应用到Subspace Clustering；HiCO应用到相关聚类(Correlation Clustering)上；基于HiSC改进的DiSH能够找到更加复杂的簇结构。
+基于OPTICS算法**扩展**有很多，如OPTICS-OF用来检测异常值(Outliar Detection)；DeLi-Clu算法来消除eps参数，提供比OPTICS更好的性能指标；HiSC算法将其应用到Subspace Clustering；HiCO应用到相关聚类(Correlation Clustering)上；基于HiSC改进的DiSH能够找到更加复杂的簇结构。
+
+---
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN.svg.png?imageView2/2/w/400
