--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -107,7 +107,13 @@ $$
 
 ---
 
-基于OPTICS算法**扩展**有很多，如OPTICS-OF用来检测异常值(Outliar Detection)；DeLi-Clu算法来消除eps参数，提供比OPTICS更好的性能指标；HiSC算法将其应用到Subspace Clustering；HiCO应用到相关聚类(Correlation Clustering)上；基于HiSC改进的DiSH能够找到更加复杂的簇结构。
+基于OPTICS算法**扩展**有很多，比如：
+
+- OPTICS-OF用来检测异常值(Outliar Detection)；
+- DeLi-Clu算法来消除eps参数，提供比OPTICS更好的性能指标；
+- HiSC算法将其应用到Subspace Clustering；
+- HiCO应用到相关聚类(Correlation Clustering)上；
+- 基于HiSC改进的DiSH能够找到更加复杂的簇结构。
 
 ---
 
