--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -117,6 +117,19 @@ $$
 
 ---
 
+#### 基于峰值密度和距离
+
+这是由Alex和Alessandro于2014年发表在的Science上的一篇关于聚类的文章，整体思路非常简单，效果很不错。
+
+文中聚类算法的核心思想在于对**聚类中心**的刻画上，作者认为聚类中心应该同时具有以下两个特点：
+
+- 本身的密度大，即它被密度均不超过它的邻居包围；
+- 与其它密度更大的数据点之间的“距离”相对更大
+
+我们可以用一种通俗的方法来解释，
+
+---
+
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/2000px-DBSCAN.svg.png?imageView2/2/w/400
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/dbscan-example.png?imageView2/2/w/400
@@ -130,3 +143,4 @@ $$
 [^1]: [Clustering：Model-Based Algorithm](http://isilic.iteye.com/blog/1829011)
 [^2]: [Parallel OPTICS － 密度聚类算法Spark MLlib上的实现](http://www.hansight.com/blog-Parallel-OPTICS.html)
 [^3]: [OPTICS: Ordering Points To Identify the Clustering Structure](http://www.crest.iu.edu/~chemuell/projects/presentations/optics-v1.pdf)
+[^4]: [发表在 Science 上的一种新聚类算法](http://blog.csdn.net/itplus/article/details/38926837)
