--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -126,7 +126,9 @@ $$
 - 本身的密度大，即它被密度均不超过它的邻居包围；
 - 与其它密度更大的数据点之间的“距离”相对更大
 
-我们可以用一种通俗的方法来解释，
+---
+
+> 我们可以用一种通俗的方法来解释，就好比江湖中的帮派，各个帮派的老大相当于是聚类中心，密度大相当于小弟多，“距离”大小相当于亲疏程度，同一帮派的人之间距离小，而不同帮派的人之间距离大。作为帮派老大有什么特点呢？一方面，他拥有众多的小弟，本身密度很大；另外，他与其它更大帮派老大距离应该更大，不然就要打架了。
 
 ---
 
