--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -132,9 +132,9 @@ $$
 
 ---
 
-为了从数学的角度来描述聚类中心，我们需要定义两个指标：局部密度$\rho_i$和距离$\delta_i$
+为了从数学的角度来描述聚类中心，我们需要定义两个指标：局部密度$\rho_i$和距离$\delta_i$。
 
-$x_i$的局部密度$\rho_i$定义为：
+$x_i$的**局部密度**$\rho_i$定义为：
 
 $$
 \rho_i = \sum_j \chi(d_{ij} - d_c)
@@ -150,9 +150,17 @@ $$
 
 ---
 
-距离$\delta_i$度量$x_i$和比其密度高的最近样本点之间的距离。如果$\rho_i$为最大值，则$\delta_i$为离$x_i$最远样本之间的距离。
+距离$\delta_i$度量$x_i$和比其密度高的**最近**样本点之间的距离。如果$\rho_i$为最大值，则$\delta_i$为离$x_i$最远样本之间的距离。
 
 $$\begin{equation} \delta_i=\begin{cases} \underset{j:\rho_j>\rho_i}{\min}(d_{ij}), & \text{if \(\exists j,\rho_j>\rho_i\)};\\ \underset{j}{\max}(d_{ij}), & otherwise. \end{cases} \end{equation}$$
+
+![数据点分类][9]
+
+---
+
+我们根据每个点的$(\rho_i,\delta_i)$画出决策图，
+
+![数据点分类][10]
 
 ---
 
@@ -164,6 +172,8 @@ $$\begin{equation} \delta_i=\begin{cases} \underset{j:\rho_j>\rho_i}{\min}(d_{ij
 [6]:http://7xjbdi.com1.z0.glb.clouddn.com/OPTICS.svg.png
 [7]:http://7xjbdi.com1.z0.glb.clouddn.com/optics_steps.png?imageView2/2/w/500
 [8]:http://7xjbdi.com1.z0.glb.clouddn.com/optics_2.png?imageView2/2/w/500
+[9]:http://7xjbdi.com1.z0.glb.clouddn.com/peak_cluster.png?imageView2/2/w/350
+[10]:http://7xjbdi.com1.z0.glb.clouddn.com/peaks_cluster2.png?imageView2/2/w/500
 
 
 [^1]: [Clustering：Model-Based Algorithm](http://isilic.iteye.com/blog/1829011)
