--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -128,7 +128,7 @@ $$
 
 ---
 
-> 我们可以用一种通俗的方法来解释，就好比江湖中的帮派，各个帮派的老大相当于是聚类中心，密度大相当于小弟多，“距离”大小相当于亲疏程度，同一帮派的人之间距离小，而不同帮派的人之间距离大。作为帮派老大有什么特点呢？一方面，他拥有众多的小弟，本身密度很大；另外，他与其它更大帮派老大距离应该更大，不然就要打架了。
+> 我们可以用一种通俗的方法来解释，就好比江湖中的帮派，各个帮派的老大相当于是聚类中心，密度大相当于小弟多，“距离”大小相当于亲疏程度，同一帮派的人之间距离小，而不同帮派的人之间距离大。作为帮派老大有什么特点呢？一方面，他拥有众多的小弟，本身密度很大；另外，他与其它更大帮派老大距离应该更大，不然就要打架了[^4]。
 
 ---
 
@@ -161,6 +161,8 @@ $$\begin{equation} \delta_i=\begin{cases} \underset{j:\rho_j>\rho_i}{\min}(d_{ij
 我们根据每个点的$(\rho_i,\delta_i)$画出决策图，
 
 ![数据点分类][10]
+
+> 容易发现，1号和10号数据点由于同时具有较大的$\rho$值和$\delta$值，于是就脱颖而出了，这两个点正好是图A的两个聚类中心。26,27,28这三个数据点在原始数据集中是“离群点”，它们的特点是：$\delta$值很大，但$\rho$值很小。
 
 ---
 
