--- a/_posts/2016-06-21-cluster2.md
+++ b/_posts/2016-06-21-cluster2.md
@@ -162,7 +162,7 @@ $$\begin{equation} \delta_i=\begin{cases} \underset{j:\rho_j>\rho_i}{\min}(d_{ij
 
 ![数据点分类][10]
 
-> 容易发现，1 号和 10 号数据点由于同时具有较大的 $\rho$ 值和 $\delta$ 值，于是就脱颖而出了，这两个点正好是图A的两个聚类中心。26,27,28这三个数据点在原始数据集中是“离群点”，它们的特点是：$\delta$ 值很大，但 $\rho$ 值很小。
+> 容易发现，1 号和 10 号数据点由于同时具有较大的 $\rho$ 值和 $\delta$ 值，于是就脱颖而出了，这两个点正好是图A的两个聚类中心。26 ,27 ,28 这三个数据点在原始数据集中是“离群点”，它们的特点是：$\delta$ 值很大，但 $\rho$ 值很小。
 
 ---
 
