--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -7,7 +7,7 @@ date:   2016-06-26 8:30
 categories: 机器学习
 ---
 
-#### 模型思想
+#### 模型思想[^1]
 
 Boosting思想其实相当的简单，大概就是，对一份数据，建立M个模型（比如分类），一般这种模型比较简单，称为弱分类器(weak learner)。每次分类都将上一次分错的数据权重提高一点再进行分类，越往后执行，训练出的模型就越会在意那些容易分错（权重高）的点。这样最终得到的分类器在测试数据与训练数据上都可以得到比较好的成绩。
 
@@ -38,3 +38,7 @@ Boosting可以用下面的公式来表示：
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/weak_learner.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/Boosting_1.png
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost.png
+
+
+[^1]:[模型组合(Model Combining)之Boosting与Gradient Boosting](http://www.cnblogs.com/LeftNotEasy/archive/2011/01/02/machine-learning-boosting-and-gradient-boosting.html)
+[^2]:[浅谈 Adaboost 算法](http://blog.csdn.net/haidao2009/article/details/7514787)
