--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -33,11 +33,26 @@ Boosting可以用下面的公式来表示：
 
 ![][3]
 
+---
 
+#### 举个栗子
+
+下面我们举一个简单的例子来看看adaboost的实现过程：
+
+![][4]
+
+图中，“$+$”和“$-$”分别表示两种类别，在这个过程中，我们使用水平或者垂直的直线作为分类器，来进行分类。
+
+---
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/weak_learner.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/Boosting_1.png
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost.png
+[4]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_1.png
+[5]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_2.png
+[6]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_3.png
+[7]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_4.png
+[8]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_5.png
 
 
 [^1]:[模型组合(Model Combining)之Boosting与Gradient Boosting](http://www.cnblogs.com/LeftNotEasy/archive/2011/01/02/machine-learning-boosting-and-gradient-boosting.html)
