--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -43,12 +43,51 @@ Boosting可以用下面的公式来表示：
 
 图中，“$+$”和“$-$”分别表示两种类别，在这个过程中，我们使用水平或者垂直的直线作为分类器，来进行分类。
 
+第一次分类：
+
+![][5]
+
+第一次分类有3个点划分错误，根据误差表达式：
+
+$$\varepsilon_t = Pr_{i\thicksim D_t}[h_t(x_i)\neq y_i] = \sum_{i=1}^{N}D_t[h_t(x_i)\neq y_i]$$
+
+则：
+
+$$\varepsilon_1 = 0.1+0.1+0.1 = 0.3$$
+
+分类器权重：
+
+$$\alpha_1 = \frac{1}{2} \ln(\frac{1-\varepsilon_1}{\varepsilon_1}) = \frac{1}{2} \ln(\frac{1-0.3}{0.3}) = 0.42$$
+
+然后根据算法把错分点的权值变大。对于正确分类的7个点，权值不变，仍为0.1,对于错分的3个点，权值为：
+
+$$D_1 = D_0(\frac{1-\varepsilon_1}{\varepsilon_1}) = 0.1*(\frac{1-0.3}{0.3}) = 0.2333$$
+
+第二次分类：
+
+![][6]
+
+如图所示，有3个"$-$"分类错误。上轮分类后权值之和为：$0.1*7+0.2333*3=1.3990$。
+
+分类误差：
+
+$$\varepsilon_2 = 0.1*3/1.3990 = 0.2144$$
+
+分类器权重：
+
+$$\alpha_2 = \frac{1}{2} \ln(\frac{1-\varepsilon_2}{\varepsilon_2}) = \frac{1}{2} \ln(\frac{1-0.2144}{0.2144}) = 0.6493$$
+
+错分的3个点的权值：
+
+$$D_2 = D_1(\frac{1-\varepsilon_2}{\varepsilon_2}) = 0.2333*(\frac{1-0.2144}{0.2144}) = 0.2333$$
+
+
 ---
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/weak_learner.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/Boosting_1.png
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost.png
-[4]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_1.png?imageView2/2/w/300
+[4]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_1.png?imageView2/2/w/250
 [5]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_2.png
 [6]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_3.png
 [7]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_4.png
