--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -43,6 +43,8 @@ Boosting可以用下面的公式来表示：
 
 图中，“$+$”和“$-$”分别表示两种类别，在这个过程中，我们使用水平或者垂直的直线作为分类器，来进行分类。
 
+---
+
 第一次分类：
 
 ![][5]
@@ -63,6 +65,8 @@ $$\alpha_1 = \frac{1}{2} \ln(\frac{1-\varepsilon_1}{\varepsilon_1}) = \frac{1}{2
 
 $$D_1 = D_0(\frac{1-\varepsilon_1}{\varepsilon_1}) = 0.1*(\frac{1-0.3}{0.3}) = 0.2333$$
 
+---
+
 第二次分类：
 
 ![][6]
@@ -81,6 +85,23 @@ $$\alpha_2 = \frac{1}{2} \ln(\frac{1-\varepsilon_2}{\varepsilon_2}) = \frac{1}{2
 
 $$D_2 = D_1(\frac{1-\varepsilon_2}{\varepsilon_2}) = 0.2333*(\frac{1-0.2144}{0.2144}) = 0.2333$$
 
+---
+
+第三次分类：
+
+![][7]
+
+同理可求得：
+
+$$\varepsilon_3=0.1365;\alpha_3=0.9223;D_3=0.6326$$
+
+---
+
+整合所有子分类器：
+
+![][8]
+
+> 即使是简单的分类器，组合起来也能获得很好的分类效果。
 
 ---
 
