--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -37,7 +37,7 @@ Boosting可以用下面的公式来表示：
 
 #### 举个栗子
 
-下面我们举一个简单的例子来看看adaboost的实现过程：
+下面我们举一个简单的例子来看看adaboost的实现过程[^4]：
 
 ![][4]
 
@@ -99,7 +99,7 @@ $$\varepsilon_3=0.1365;\alpha_3=0.9223;D_3=0.6326$$
 
 ---
 
-整合所有子分类器：
+整合所有子分类器[^5]：
 
 ![][8]
 
@@ -120,3 +120,5 @@ $$\varepsilon_3=0.1365;\alpha_3=0.9223;D_3=0.6326$$
 [^1]:[模型组合(Model Combining)之Boosting与Gradient Boosting](http://www.cnblogs.com/LeftNotEasy/archive/2011/01/02/machine-learning-boosting-and-gradient-boosting.html)
 [^2]:[浅谈 Adaboost 算法](http://blog.csdn.net/haidao2009/article/details/7514787)
 [^3]:[Explaining AdaBoost](http://rob.schapire.net/papers/explaining-adaboost.pdf)
+[^4]:[AdaBoost algorithm](https://alliance.seas.upenn.edu/~cis520/dynamic/2014/wiki/index.php?n=Lectures.Boosting)
+[^5]:[AdaBoost 讲解](http://wenku.baidu.com/view/da0bdada998fcc22bcd10d5c.html)
