--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -107,6 +107,12 @@ $$\varepsilon_3=0.1365;\alpha_3=0.9223;D_3=0.6326$$
 
 ---
 
+#### 前向分步加法模型
+
+AdaBoost算法是前向分步加法算法的特例，模型是由基本分类器组成的加法模型，损失函数是指数函数。
+
+---
+
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/weak_learner.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/Boosting_1.png
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost.png
