--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -111,6 +111,12 @@ $$\varepsilon_3=0.1365;\alpha_3=0.9223;D_3=0.6326$$
 
 AdaBoost算法是前向分步加法算法的特例，模型是由基本分类器组成的加法模型，损失函数是指数函数。
 
+- 加法模型（addtive model）
+
+$$f(x) = \sum_{k=1}^{K} \beta_k \cdot b(x; \gamma_k)$$
+
+其中，$b(x; \gamma_k)$为基函数，$\gamma_k$为基函数的参数，$\beta_k$为基函数的系数。
+
 ---
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/weak_learner.png
