--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -109,7 +109,9 @@ $$\varepsilon_3=0.1365;\alpha_3=0.9223;D_3=0.6326$$
 
 #### 前向分步加法模型
 
-AdaBoost算法是前向分步加法算法的特例，模型是由基本分类器组成的加法模型，损失函数是指数函数。
+下面我们来解释下AdaBoost的算法流程为啥是这样的？
+
+其实AdaBoost算法是前向分步加法算法的特例，我们先来搞清楚前向分步加法算法。
 
 - 加法模型（addtive model）
 
