--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -119,6 +119,8 @@ $$f(x) = \sum_{k=1}^{K} \beta_k \cdot b(x; \gamma_k)$$
 
 其中，$b(x; \gamma_k)$为基函数，$\gamma_k$为基函数的参数，$\beta_k$为基函数的系数。
 
+[深入浅出ML之Boosting家族](http://www.52caml.com/head_first_ml/ml-chapter6-boosting-family/)
+
 ---
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/weak_learner.png
