--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -21,6 +21,8 @@ Boosting可以用下面的公式来表示：
 
 > Boosting更像是一个人学习的过程，开始学一样东西的时候，会去做一些习题，但是常常连一些简单的题目都会弄错，但是越到后面，简单的题目已经难不倒他了，就会去做更复杂的题目，等到他做了很多的题目后，不管是难题还是简单的题都可以解决掉了。
 
+
+
 ---
 
 #### 算法流程
@@ -126,6 +128,8 @@ $$f(x) = \sum_{k=1}^{K} \beta_k \cdot b(x; \gamma_k)$$
 其中，$b(x; \gamma_k)$为基函数，$\gamma_k$为基函数的参数，$\beta_k$为基函数的系数。
 
 **[深入浅出ML之Boosting家族](http://www.52caml.com/head_first_ml/ml-chapter6-boosting-family/)**
+
+> AdaBoost算法是模型为加法模型、损失函数为指数函数($L(y, f(x)) = \exp [-y f(x)]$)、学习算法为前向分步算法时的学习方法。
 
 ---
 
