--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -45,7 +45,7 @@ $$
 
 #### 举个栗子
 
-下面我们举一个简单的例子来看看adaboost的实现过程[^4]：
+下面我们举一个简单的例子来看看adaboost的实现过程[^4][^6]：
 
 ![][4]
 
@@ -107,6 +107,10 @@ $$\varepsilon_3=0.1365;\alpha_3=0.9223;D_3=0.6326$$
 
 ---
 
+![][9]
+
+---
+
 整合所有子分类器[^5]：
 
 ![][8]
@@ -141,10 +145,11 @@ $$f(x) = \sum_{k=1}^{K} \beta_k \cdot b(x; \gamma_k)$$
 [6]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_3.png
 [7]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_4.png?imageView2/2/w/300
 [8]:http://7xjbdi.com1.z0.glb.clouddn.com/adaboost_5.png
-
+[9]:http://7xjbdi.com1.z0.glb.clouddn.com/toy_example.png
 
 [^1]:[模型组合(Model Combining)之Boosting与Gradient Boosting](http://www.cnblogs.com/LeftNotEasy/archive/2011/01/02/machine-learning-boosting-and-gradient-boosting.html)
 [^2]:[浅谈 Adaboost 算法](http://blog.csdn.net/haidao2009/article/details/7514787)
 [^3]:[Explaining AdaBoost](http://rob.schapire.net/papers/explaining-adaboost.pdf)
 [^4]:[AdaBoost algorithm](https://alliance.seas.upenn.edu/~cis520/dynamic/2014/wiki/index.php?n=Lectures.Boosting)
 [^5]:[AdaBoost 讲解](http://wenku.baidu.com/view/da0bdada998fcc22bcd10d5c.html)
+[^6]:[Boosting Foundations and Algorithms](http://vdisk.weibo.com/s/AEDkzf10UjDJ)
